Fix estimate layout on iphone screen

--- a/bootstrap/less/hs-responsive-480px-max.less
+++ b/bootstrap/less/hs-responsive-480px-max.less
@@ -2,7 +2,6 @@
 // Responsive: Phones
 // --------------------------------------------------
 
-
 /*  Phones */
 @media (max-width: 480px) {
 	// Reduce page gutters
@@ -165,6 +164,13 @@
     
     blockquote cite {
     	font-size: @baseFontSize * 1.5 !important;
+    }
+}
+
+/*  Phones */
+@media (max-width: 320px) {
+    #new-lead input {
+        max-width: 80%;
     }
 }
 
